--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -4,6 +4,12 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
 }
 
 .vertical {
@@ -17,35 +23,37 @@ body {
     border-radius: 10px;
 }
 
-#search_header {
-    margin: 0;
-}
-
-#search_container {
+#left_container {
     left: 2%;
+    overflow: hidden;
 }
 
-#list_container {
+#middle_container {
     left: 50%;
     margin-left: -14.5%;
     vertical-align: middle;
 }
 
-#suggestion_container {
+#right_container {
     right: 2%;
 }
 
-input, h3 {
+input, h3, p {
+    margin: 0;
     display: block;
     text-align: center;
     color: #fff;
 }
 
+:focus {
+    border: 0 transparent;
+}
+
 .header {
-    margin: 0;
     width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    height: 9%;
+    padding-top: 1%;
+    margin: 0 0 1%;
     background-color: rgba(0, 0, 0, 0.5);
     border: 0;
     border-radius: 10px;
@@ -64,6 +72,41 @@ input::-moz-placeholder, input:-moz-placeholder {
 input:-ms-input-placeholder {
     color: rgba(100, 255, 255, 1);
     text-align: center;
+}
+
+.animecontainer {
+    margin: 1% 0 0;
+    padding-bottom: 1%;
+    width: 100%;
+    height: 89.5%;
+    overflow-y: scroll;
+    border-radius: 10px;
+}
+
+.anime {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    padding: 5px 1%;
+    border: 0;
+    width: 96%;
+    margin: 5px 1%;
+    height: auto;
+    display: flex;
+    overflow-x: hidden;
+}
+
+.animetext {
+    width: 80%;
+}
+
+.animebutton {
+    width: 20%;
+    height: 25px;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: #fff;
+    border: 0;
+    border-radius: 10px;
 }
 
 #search_box {
