--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -21,11 +21,11 @@ body {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
+    overflow: hidden;
 }
 
 #left_container {
     left: 2%;
-    overflow: hidden;
 }
 
 #middle_container {
@@ -38,11 +38,15 @@ body {
     right: 2%;
 }
 
-input, h3, p {
+input, h1, p {
     margin: 0;
     display: block;
     text-align: center;
     color: #fff;
+}
+
+h1 {
+    font-size: 20px;
 }
 
 :focus {
@@ -76,7 +80,7 @@ input:-ms-input-placeholder {
 
 .animecontainer {
     margin: 1% 0 0;
-    padding-bottom: 1%;
+    padding: 0 0 1%;
     width: 100%;
     height: 89.5%;
     overflow-y: scroll;
