--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1,9 +1,17 @@
 body {
-    background-image: url(/705197.png);
-    background-attachment: fixed;
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    background: url(/705197.png) no-repeat fixed center center;
     overflow: hidden;
 }
 
