--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1,11 +1,23 @@
 body {
     content: "";
     display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    padding: 0;
+    margin: 0;
+    border: 0;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background: url(/705197.png) no-repeat fixed center center;
+    background-image: url(/705197.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
     overflow: hidden;
 }
 
